# rust-imdb-watcher

./: .gitignore  Cargo.toml
src/: main.rs  models.rs
src/models/: movies.rs  playlist.rs  ratings.rs  users.rs
src/routes/: movie.rs  movies.rs  ratings.rs  user.rs  users.rs
