[package]
name = "my-app"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Bergqvist <jacob.bergqvist@gmail.com>"]

[dependencies]
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.14.0"
select = "0.6.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.reqwest]
version = "0.11.13"
features = ["json"]
